--- a/katrid/templates/base.html
+++ b/katrid/templates/base.html
@@ -1,5 +1,5 @@
 {% extends "page.html" %}
-{% block body_class %}navy-skin bg-skin{% endblock %}
+{% block body_class %}default-skin bg-skin{% endblock %}
 {% block page %}
 {% include "include/navbar.html" %}
 {% include "include/left-menu.html" %}
