--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -4,13 +4,28 @@ body {
   background: #eeeeee;
 }
 
-#left-side-menu>li.menu-item .menu-item {
+#left-side-menu > li.menu-item .menu-item {
   border-top: none;
+}
+
+#left-menu .user-profile-menu {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  opacity: .8;
+  border: none;
+  padding: 5px;
+  color: #f2f2f2;
+  bottom: 0;
 }
 
 .skin(@bg-color) {
   #header.navbar {
     border: none;
+  }
+
+  #left-menu .user-profile-menu {
+  background: @bg-color;
   }
 
   #header.navbar-skin {
@@ -48,16 +63,16 @@ body {
   #left-menu.skin .menu-item.active a {
     background: darken(@bg-color, 5%);
   }
-  #left-menu.skin>nav>#left-side-menu>.menu-item > a:hover {
+  #left-menu.skin > nav > #left-side-menu > .menu-item > a:hover {
     background: darken(@bg-color, 5%);
     color: #ffffff;
   }
-  #left-menu.skin>nav>#left-side-menu>.menu-item>ul a:hover {
+  #left-menu.skin > nav > #left-side-menu > .menu-item > ul a:hover {
     background: darken(@bg-color, 8%);
     color: #ffffff;
   }
 
-  #left-menu.skin>nav>#left-side-menu>.menu-item {
+  #left-menu.skin > nav > #left-side-menu > .menu-item {
     border-top: 1px solid lighten(@bg-color, 4%);
   }
   #left-menu.skin #left-side-menu > li.menu-item:last-child {
@@ -107,7 +122,8 @@ body {
 
 #left-menu {
   .logo-area {
-    background: #ffffff;
+    position: relative;
+    //background: #ffffff;
   }
 }
 
