--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -50,8 +50,9 @@
 
 #left-menu .logo-area {
   text-align: center;
-  padding-top: 20px;
+  padding-top: 2px;
   padding-bottom: 20px;
+  position: relative;
   //background: linear-gradient(to bottom, darken(@background-color, 10%) 5%, @background-color 100%);
 }
 
