--- a/katrid/templates/include/navbar.html
+++ b/katrid/templates/include/navbar.html
@@ -2,7 +2,7 @@
 <nav id="header" class="navbar navbar-default navbar-skin">
   <div class="navbar-header">
     <a class="navbar-brand dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true"
-       aria-expanded="false">Accounting <span class="caret"></span></a>
+       aria-expanded="false">Accounting <i class="fa fa-angle-down"></i></a>
     <ul class="dropdown-menu">
       <li><a href="#"><i class="fa fa-fw fa-pie-chart"></i> CRM / Sales</a></li>
       <li><a href="#"><i class="fa fa-fw fa-users"></i> Human Resources</a></li>
@@ -16,8 +16,8 @@
   <div class="small-logo">
     <span id="current-menu-name">Accounting</span>
   </div>
-  <div id="navbar" class="navbar-collapse collapse">
-    <ul class="nav navbar-nav">
+  <div id="navbar" class="navbar-collapse">
+    <ul class="nav navbar-nav hidden-xs hidden-sm hidden-md">
       <li class="navbar-search"><input id="navbar-search" type="text" class="navbar-search-control" placeholder="Find resources here..."></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -33,19 +33,10 @@
           <li><a href="#">One more separated link</a></li>
         </ul>
       </li>
+    </ul>
+    <ul id="static-nav" class="nav navbar-nav navbar-right">
       <li><a href="javascript:void(0);" data-action="voiceCommand" title="Execute command voice"><i class="fa fa-microphone"></i></a></li>
       <li><a href="javascript:void(0);" data-action="fullScreen" title="Full Screen"><i class="fa fa-arrows-alt"></i></a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="user-dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Name <img class="user-avatar" src="img/user-avatar-48.jpg"></a>
-        <ul class="dropdown-menu">
-          <li><a href="#"><i class="fa fa-fw fa-calendar"></i> Calendar</a></li>
-          <li><a href="#"><i class="fa fa-fw fa-user"></i> My Profile</a></li>
-          <li><a href="#"><i class="fa fa-fw fa-gear"></i> System Settings</a></li>
-          <li><a href="#"><i class="fa fa-fw fa-sign-out"></i> Sign out</a></li>
-        </ul>
-      </li>
       <li><a href="#" title="Logout"><i class="fa fa-lg fa-sign-out"></i></a></li>
     </ul>
   </div><!--/.nav-collapse -->
