--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -3,9 +3,9 @@
   margin-bottom: 0;
 }
 
-.navbar ul.navbar-nav>li>a:hover,
-.navbar ul.navbar-nav>.open>a {
-  background: rgba(0,0,0,.1) !important;
+.navbar ul.navbar-nav > li > a:hover,
+.navbar ul.navbar-nav > .open > a {
+  background: rgba(0, 0, 0, .1) !important;
 }
 
 #header {
@@ -18,7 +18,7 @@
   border-radius: 50%;
 }
 
-.small-logo>img {
+.small-logo > img {
   max-width: 135px;
 }
 
@@ -26,7 +26,7 @@
   padding: 15px 22px 14px 22px;
   font-size: 15px;
   float: left;
-  background: rgba(0,0,0,.1);
+  background: rgba(0, 0, 0, .1);
   cursor: pointer;
 }
 
@@ -68,7 +68,7 @@
   transition: all 300ms;
 }
 
-#left-side-menu>li.menu-item:last-child {
+#left-side-menu > li.menu-item:last-child {
   border-bottom: 1px solid #d4d5d7;
 }
 
@@ -108,10 +108,9 @@
   background-color: lighten(@body-bg, 7%);
 }
 
-#left-menu .menu-item>a>small {
+#left-menu .menu-item > a > small {
   font-weight: 300;
 }
-
 
 #left-side-menu > .menu-item > a {
   background: #f3f3f3;
@@ -153,7 +152,7 @@
   border-right: 1px solid @navbar-main-border-color;
 }
 
-.navbar-nav>li>a {
+.navbar-nav > li > a {
   transition: all 300ms;
 }
 
@@ -213,4 +212,34 @@
 
 .list-view-item a .panel-body {
   text-align: center;
+}
+
+a.user-dropdown {
+  position: absolute;
+  right: 2px;
+  color: #ffffff;
+}
+
+#header {
+  #static-nav {
+    float: right !important;
+  }
+
+  #static-nav {
+    margin: 0;
+    margin-right: -15px;
+  }
+
+  #static-nav>li>a {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+
+  #static-nav>li {
+    float: left;
+  }
+}
+
+.show-left-menu.page-small #header #static-nav {
+  display: none !important;
 }
