--- a/katrid/templates/include/navbar.html
+++ b/katrid/templates/include/navbar.html
@@ -17,7 +17,7 @@
     <span id="current-menu-name">Accounting</span>
   </div>
   <div id="navbar" class="navbar-collapse">
-    <ul class="nav navbar-nav hidden-xs hidden-sm hidden-md">
+    <ul class="nav navbar-nav hidden-xs">
       <li class="navbar-search"><input id="navbar-search" type="text" class="navbar-search-control" placeholder="Find resources here..."></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
