--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -243,3 +243,7 @@ a.user-dropdown {
 .show-left-menu.page-small #header #static-nav {
   display: none !important;
 }
+
+.navbar-collapse {
+  border-top: none;
+}
