--- a/katrid/templates/dashboard-1.html
+++ b/katrid/templates/dashboard-1.html
@@ -4,10 +4,10 @@
     <div class="row">
 
       <!-- dashboard widgets -->
-      <div class="col-sm-12">
+      <div class="col-lg-12">
         <div class="panel panel-default">
           <div class="panel-body">
-            <div class="col-md-2">
+            <div class="col-lg-2">
               <h4>Recent Activities</h4>
               <ul class="media-list">
                 <li class="media">
@@ -36,27 +36,27 @@
                 </li>
               </ul>
             </div>
-            <div class="col-md-7" id="realtime-chart" style="height: 180px;"></div>
-            <div class="col-md-3">
+            <div class="col-lg-7" id="realtime-chart" style="height: 180px;"></div>
+            <div class="col-lg-3">
               <div class="row">
                 <h5><strong>Last 24 hours</strong></h5>
-                <span class="col-md-4"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
-                <div class="col-md-8">
-                  <div class="col-sm-6">
+                <span class="col-lg-4"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
+                <div class="col-lg-8">
+                  <div class="col-lg-6">
                     <label class="label label-primary">1,000</label>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-lg-6">
                     <label class="text-danger"> (<i class="fa fa-arrow-down"></i>100)</label>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <span class="col-md-4"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
-                <div class="col-md-8">
-                  <div class="col-sm-6">
+                <span class="col-lg-4"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
+                <div class="col-lg-8">
+                  <div class="col-lg-6">
                     <label class="label label-primary">$15,790.10</label>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-lg-6">
                     <label class="text-danger"> (<i class="fa fa-arrow-up"></i>702.02)</label>
                   </div>
                 </div>
@@ -66,23 +66,23 @@
               </div>
               <div class="row">
                 <h5><strong>Last 30 days</strong></h5>
-                <span class="col-md-4"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
-                <div class="col-md-8">
-                  <div class="col-sm-6">
+                <span class="col-lg-4"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
+                <div class="col-lg-8">
+                  <div class="col-lg-6">
                     <label class="label label-primary">27,000</label>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-lg-6">
                     <label class="text-danger"> (<i class="fa fa-arrow-down"></i>2,780)</label>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <span class="col-md-4"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
-                <div class="col-md-8">
-                  <div class="col-sm-6">
+                <span class="col-lg-4"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
+                <div class="col-lg-8">
+                  <div class="col-lg-6">
                     <label class="label label-primary">$415,790.10</label>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-lg-6">
                     <label class="text-danger"> (<i class="fa fa-arrow-up"></i>80,189.00)</label>
                   </div>
                 </div>
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <div class="panel panel-default">
           <div class="panel-heading">
             Expenses by category
@@ -101,7 +101,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <div class="panel panel-default">
           <div class="panel-heading"><i class="fa fa-fw fa-bar-chart"></i> Income x Expenditure</div>
           <div class="panel-body">
@@ -109,7 +109,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-lg-2">
         <div class="panel panel-default dashboard-panel">
           <div class="panel-heading">Stock status</div>
           <div class="panel-body">
@@ -159,7 +159,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <div class="panel panel-default">
           <div class="panel-heading">
             My ToDo Tasks
@@ -219,7 +219,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <div class="panel panel-default">
           <div class="panel-heading">
             Expenses by month
@@ -229,7 +229,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <div class="panel panel-default">
           <div class="panel-heading">
             Revenue by month
