--- a/katrid/templates/advanced-forms.html
+++ b/katrid/templates/advanced-forms.html
@@ -72,7 +72,7 @@
               <div>
                 <div class="col-lg-2">
                   <div class="image-box">
-                    <img src="img/user-avatar.jpg">
+                    <img src="img/faces/a-128.jpg">
                     <div class="text-right image-box-buttons">
                       <button class="btn btn-xs btn-default" type="button" title="Change"><i class="fa fa-pencil"></i>
                       </button>
@@ -258,7 +258,7 @@
               <div>
                 <div class="col-lg-1">
                   <div class="image-box">
-                    <img src="img/user-avatar.jpg">
+                    <img src="img/faces/a-128.jpg">
                     <div class="text-right image-box-buttons">
                       <button class="btn btn-xs btn-default" type="button" title="Change"><i class="fa fa-pencil"></i>
                       </button>
