--- a/katrid/templates/include/horz-advanced-form.html
+++ b/katrid/templates/include/horz-advanced-form.html
@@ -27,7 +27,7 @@
               <div>
                 <div class="col-lg-2">
                   <div class="image-box">
-                    <img src="img/user-avatar.jpg">
+                    <img src="img/faces/a-128.jpg">
                     <div class="text-right image-box-buttons">
                       <button class="btn btn-default" type="button" title="Change"><i class="fa fa-pencil"></i></button>
                       <button class="btn btn-default" type="button" title="Clear"><i class="fa fa-trash"></i></button>
