--- a/katrid/templates/dashboard-1.html
+++ b/katrid/templates/dashboard-1.html
@@ -8,30 +8,30 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="col-lg-2">
-              <h4>Recent Activities</h4>
+              <h4 class="font-300">Recent Activities</h4>
               <ul class="media-list">
-                <li class="media">
-                  <div class="media-object pull-left">
+                <li class="timeline-item">
+                  <div class="timeline-icon pull-left">
                     <i class="fa fa-envelope"></i>
                   </div>
-                  <div class="media-body">New message from customer<br>
+                  <div class="timeline-content">New message from customer<br>
                     <small class="font-xs"><a href="#">Inbox</a> - 03:56 pm</small>
                   </div>
                 </li>
-                <li class="media">
-                  <div class="media-object pull-left">
-                    <i class="fa fa-user"></i>
+                <li class="timeline-item">
+                  <div class="timeline-icon pull-left">
+                    <i class="fa fa-envelope"></i>
                   </div>
-                  <div class="media-body">New won opportunity<br>
-                    <small class="font-xs"><a href="#">Sales Manager</a> - 03:53 pm</small>
+                  <div class="timeline-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
+                    <small class="font-xs"><a href="#">Inbox</a> - 01:25 pm</small>
                   </div>
                 </li>
-                <li class="media">
-                  <div class="media-object pull-left">
-                    <i class="fa fa-user"></i>
+                <li class="timeline-item">
+                  <div class="timeline-icon pull-left">
+                    <i class="fa fa-envelope"></i>
                   </div>
-                  <div class="media-body">New purchase order<br>
-                    <small class="font-xs"><a href="#">Purchase Manager</a> - 01:12 pm</small>
+                  <div class="timeline-content">Lorem ipsum dolor sit amet.<br>
+                    <small class="font-xs"><a href="#">Inbox</a> - 01:22 pm</small>
                   </div>
                 </li>
               </ul>
