--- a/katrid/templates/xeditable-forms.html
+++ b/katrid/templates/xeditable-forms.html
@@ -4,19 +4,17 @@
   <link href="plugins/x-editable/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet" type="text/css">
 {% endblock %}
 {% block content %}
-  <div class="panel">
-    <div class="page-heading bg-white">
-      <h2>X-Editable Form</h2>
-      <ol class="breadcrumb">
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">UI Elements</a>
-        </li>
-        <li>Typography</li>
-      </ol>
-    </div>
+  <div class="panel page-heading">
+    <h2>X-Editable Form</h2>
+    <ol class="breadcrumb">
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="#">UI Elements</a>
+      </li>
+      <li>Typography</li>
+    </ol>
   </div>
 
   <div class="content">
