--- a/katrid/theme/less/style.less
+++ b/katrid/theme/less/style.less
@@ -22,5 +22,7 @@
 @import "style/labels.less";
 @import "style/alerts.less";
 @import "style/rating.less";
+@import "style/menu.less";
+@import "style/timeline.less";
 @import "style/progress-bars.less";
 @import "style/utilities.less";
