--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -45,7 +45,7 @@
 }
 
 #left-menu #avatar {
-  max-height: 67px;
+  max-height: 68px;
 }
 
 #left-menu .logo-area {
@@ -56,7 +56,7 @@
   //background: linear-gradient(to bottom, darken(@background-color, 10%) 5%, @background-color 100%);
 }
 
-#left-menu a {
+#left-side-menu .menu-item > a {
   color: #4c4e51;
   font-weight: 400;
   background-color: transparent;
