--- a/katrid/templates/include/left-menu.html
+++ b/katrid/templates/include/left-menu.html
@@ -32,7 +32,7 @@
       </li>
       <li class="menu-item">
         <a href="#"><i class="fa fa-lg fa-fw fa-desktop"></i> CRM / Sales <span
-            class="label label-warning pull-right animated bounceIn">New</span><br>
+            class="label label-info pull-right animated bounceIn">New</span><br>
           <small>CRM, POS and sales management...</small>
         </a>
         <ul class="nav">
@@ -56,8 +56,8 @@
         </ul>
       </li>
       <li class="menu-item">
-        <a href="#"><i class="fa fa-lg fa-fw fa-envelope-o"></i> Messages <span
-            class="badge pull-right animated bounceIn">32</span><br>
+        <a href="#"><i class="fa fa-lg fa-fw fa-envelope-o"></i> Messages
+          <span class="badge badge-warning pull-right animated bounceIn">32</span><br>
           <small>You got 32 new messages...</small>
         </a>
         <ul class="nav">
