--- a/katrid/theme/less/style/labels.less
+++ b/katrid/theme/less/style/labels.less
@@ -2,3 +2,10 @@
   font-size: 10px;
   padding: 3px 8px;
 }
+
+.label.label-menu-corner {
+  position: absolute;
+  top: 10px;
+  right: -3px;
+  padding: 3px;
+}
