--- a/katrid/templates/projects.html
+++ b/katrid/templates/projects.html
@@ -39,15 +39,15 @@
                   main
                   ERP app.</p>
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-4">
                     <span class="text-uppercase font-600">Requested By</span><br>
                     <span><a href="#" title="Go to partner profile">John Smith</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-4">
                     <span class="text-uppercase font-600">Date</span><br>
                     <span><a href="#" title="Go to partner profile">1 month ago</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-4">
                     <span class="text-uppercase font-600">Status</span><br>
                     <span><a href="#" title="Go to partner profile">Development</a></span>
                   </div>
