--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -112,6 +112,9 @@ body {
   .navbar-search-control::-moz-placeholder {
     color: @navbar-search-placeholder;
   }
+  .navbar-search-control:-moz-placeholder {
+    color: @navbar-search-placeholder;
+  }
   .navbar-search-control:-ms-input-placeholder {
     color: @navbar-search-placeholder;
   }
