--- a/katrid/theme/less/style/common.less
+++ b/katrid/theme/less/style/common.less
@@ -112,19 +112,11 @@ h3, h4, h5, h6 {
   margin-top: 6px;
 }
 
-@navbar-search-placeholder: #747474;
-
-.navbar-search-control::-webkit-input-placeholder {
-    color: @navbar-search-placeholder;
-}
-.navbar-search-control::-moz-placeholder {
-    color: @navbar-search-placeholder;
-}
-.navbar-search-control:-ms-input-placeholder {
-    color: @navbar-search-placeholder;
-}
-
 .dropdown-notifications-menu {
   padding: 10px;
   color: @text-color;
+}
+
+.form-control {
+  padding: 4px 8px;
 }
