--- a/katrid/theme/less/style/timeline.less
+++ b/katrid/theme/less/style/timeline.less
@@ -12,6 +12,13 @@
     vertical-align: middle;
     display: table-cell;
   }
+  .timeline-icon>img {
+    vertical-align: middle;
+    display: table-cell;
+    max-height:32px;
+    max-width:32px;
+    border-radius: 50%;
+  }
 
   .timeline-content {
     border-left: 1px solid @panel-default-border;
