--- a/katrid/theme/less/variables.less
+++ b/katrid/theme/less/variables.less
@@ -35,7 +35,8 @@
 @brand-blue-gray:       #607D8B;
 @brand-dark: #373737;
 
-@brand-primary: #337ab7;
+@brand-primary: rgb(55, 95, 130);
+//@brand-primary: #337ab7;
 //@brand-success: #2cc53e;
 @brand-success: #5cb85c;
 @brand-info: #7fc1df;
