--- a/katrid/templates/dashboard-1.html
+++ b/katrid/templates/dashboard-1.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block extra_head %}
+  <link href="plugins/toastr/toastr.min.css" rel="stylesheet">
+{% endblock %}
 {% block content %}
   <div class="content">
     <div class="row">
@@ -12,7 +15,7 @@
               <ul class="media-list">
                 <li class="timeline-item">
                   <div class="timeline-icon pull-left">
-                    <i class="fa fa-envelope"></i>
+                    <img src="img/faces/a-48.jpg">
                   </div>
                   <div class="timeline-content">New message from customer<br>
                     <small class="font-xs"><a href="#">Inbox</a> - 03:56 pm</small>
@@ -28,7 +31,7 @@
                 </li>
                 <li class="timeline-item">
                   <div class="timeline-icon pull-left">
-                    <i class="fa fa-envelope"></i>
+                    <img src="img/faces/b-48.jpg">
                   </div>
                   <div class="timeline-content">Lorem ipsum dolor sit amet.<br>
                     <small class="font-xs"><a href="#">Inbox</a> - 01:22 pm</small>
@@ -488,6 +491,19 @@
         }
       });
 
+    });
+
+  </script>
+  <script src="plugins/toastr/toastr.min.js"></script>
+  <script>
+
+    $(document).ready(function () {
+      setTimeout(function () {
+        toastr.options = {
+          progressBar: true
+        };
+        toastr.success('You have 32 notifications!', 'Welcome to Katrid Admin Theme');
+      }, 1000);
     });
 
   </script>
