--- a/katrid/templates/general.html
+++ b/katrid/templates/general.html
@@ -246,6 +246,9 @@
             <button id="toastr-danger" class="btn btn-danger">Error</button>
             <h3>With Progressbar</h3>
             <button id="toastr-info-2" class="btn btn-info">Info</button>
+            <div class="toast toast-info">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores consectetur culpa cumque dignissimos fugiat, itaque iusto labore nemo non perferendis repellat, saepe ut. Amet labore molestiae ut voluptatum. Ex.
+            </div>
           </div>
         </div>
       </div>
@@ -368,6 +371,7 @@
       });
       $('#toastr-info-2').click(function () {
         toastr.options = {
+          timeOut: 0,
           progressBar: true
         };
         toastr.info('Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, aspernatur doloremque inventore sapiente sed sunt.');
