--- a/katrid/theme/less/style/labels.less
+++ b/katrid/theme/less/style/labels.less
@@ -9,3 +9,11 @@
   right: -3px;
   padding: 3px;
 }
+
+.label.label-circle {
+  position: absolute;
+  border-radius: 50%;
+  top: 10px;
+  right: -3px;
+  padding: 3px;
+}
