--- a/katrid/templates/crm.html
+++ b/katrid/templates/crm.html
@@ -42,7 +42,7 @@
         <div class="kanban-items">
 
           <!-- kanban item -->
-          <div class="kanban-item bg-light-green">
+          <div class="kanban-item bg-blue-gray">
             <div class="btn-group pull-right">
               <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
                 <span class="caret"></span>
@@ -62,7 +62,31 @@
             <strong class="kanban-item-title">My test opportunity.</strong>
             <br>
             <small>More information</small>
-          </div>
+            <div>
+              <img class="img-circle" src="img/faces/a-48.jpg">
+            </div>
+            <div class="rating">
+              <input type="radio" id="star5" name="rating" value="5">
+              <label for="star5">
+                <i class="fa fa-star"></i>
+              </label>
+              <input type="radio" id="star4" name="rating" value="4">
+              <label for="star4">
+                <i class="fa fa-star"></i>
+              </label>
+              <input type="radio" id="star3" name="rating" value="3">
+              <label for="star3">
+                <i class="fa fa-star"></i>
+              </label>
+              <input type="radio" id="star2" name="rating" value="2">
+              <label for="star2">
+                <i class="fa fa-star"></i>
+              </label>
+              <input type="radio" id="star1" name="rating" value="1">
+              <label for="star1">
+                <i class="fa fa-star"></i>
+              </label>
+            </div>          </div>
           <!-- end kanban item -->
 
           <div class="kanban-item bg-light-blue">
@@ -85,9 +109,12 @@
             <strong class="kanban-item-title">My 3rd opportunity.</strong>
             <br>
             <small>More information</small>
+            <div>
+              <img class="img-circle" src="img/faces/biz-2-48.jpg">
+            </div>
           </div>
 
-          <div class="kanban-item bg-blue-gray">
+          <div class="kanban-item bg-green">
             <div class="btn-group pull-right">
               <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
                 <span class="caret"></span>
@@ -107,6 +134,9 @@
             <strong class="kanban-item-title">New one.</strong>
             <br>
             <small>More information</small>
+            <div>
+              <img class="img-circle" src="img/faces/b-48.jpg">
+            </div>
           </div>
 
           <div class="kanban-item bg-red">
@@ -129,6 +159,9 @@
             <strong class="kanban-item-title">More opportunity.</strong>
             <br>
             <small>More information</small>
+            <div>
+              <img class="img-circle" src="img/faces/biz-1-48.jpg">
+            </div>
           </div>
 
           <div class="kanban-item bg-danger">
@@ -151,6 +184,9 @@
             <strong class="kanban-item-title">My 3rd opportunity.</strong>
             <br>
             <small>More information</small>
+            <div>
+              <img class="img-circle" src="img/faces/biz-3-48.jpg">
+            </div>
           </div>
 
         </div>
@@ -199,6 +235,31 @@
             <strong class="kanban-item-title">My 2nd opportunity.</strong>
             <br>
             <small>More information</small>
+            <div>
+              <img class="img-circle" src="img/faces/biz-4-48.jpg">
+            </div>
+            <div class="rating">
+              <input type="radio" id="star5" name="rating" value="5">
+              <label for="star5">
+                <i class="fa fa-star"></i>
+              </label>
+              <input type="radio" id="star4" name="rating" value="4">
+              <label for="star4">
+                <i class="fa fa-star"></i>
+              </label>
+              <input type="radio" id="star3" name="rating" value="3">
+              <label for="star3">
+                <i class="fa fa-star"></i>
+              </label>
+              <input type="radio" id="star2" name="rating" value="2">
+              <label for="star2">
+                <i class="fa fa-star"></i>
+              </label>
+              <input type="radio" id="star1" name="rating" value="1">
+              <label for="star1">
+                <i class="fa fa-star"></i>
+              </label>
+            </div>
           </div>
 
         </div>
