--- a/katrid/templates/include/left-mail-menu.html
+++ b/katrid/templates/include/left-mail-menu.html
@@ -20,6 +20,24 @@
     </li>
     <li role="presentation">
       <a href="#"><strong>Chat <i class="fa fa-fw fa-comment-o"></i></strong></a>
+      <ul class="list-unstyled">
+        <li>
+          <img class="img-circle" src="img/faces/b-48.jpg">
+          <span>O. Martin</span>
+        </li>
+        <li>
+          <img class="img-circle" src="img/faces/g-48.jpg">
+          <span>A. Diaz</span>
+        </li>
+        <li>
+          <img class="img-circle" src="img/faces/biz-1-48.jpg">
+          <span>@client</span>
+        </li>
+        <li>
+          <img class="img-circle" src="img/faces/d-48.jpg">
+          <span>user.name</span>
+        </li>
+      </ul>
     </li>
   </ul>
 </div>
