--- a/katrid/templates/projects.html
+++ b/katrid/templates/projects.html
@@ -39,23 +39,22 @@
                   main
                   ERP app.</p>
                 <div class="row">
-                  <div class="col-sm-3 col-xs-4">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Requested By</span><br>
                     <span><a href="#" title="Go to partner profile">John Smith</a></span>
                   </div>
-                  <div class="col-sm-3 col-xs-4">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Date</span><br>
                     <span><a href="#" title="Go to partner profile">1 month ago</a></span>
                   </div>
-                  <div class="col-sm-3 col-xs-4">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Status</span><br>
                     <span><a href="#" title="Go to partner profile">Development</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Progress</span><br>
                     <div class="progress progress-xs">
-                      <div class="progress-bar progress-bar-success" style="width: 25%" role="progressbar"
-                           aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar progress-bar-success" style="width: 25%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -110,19 +109,19 @@
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi, consectetur eligendi eos excepturi ipsam provident rem voluptates.</p>
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Requested By</span><br>
                     <span><a href="#" title="Go to partner profile">John Smith</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Date</span><br>
                     <span><a href="#" title="Go to partner profile">1 year ago</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Status</span><br>
                     <span><a href="#" title="Go to partner profile">Development</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Progress</span><br>
                     <div class="progress progress-xs">
                       <div class="progress-bar progress-bar-danger" style="width: 68%" role="progressbar"
@@ -177,19 +176,19 @@
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet distinctio impedit non rem! Asperiores ex iste neque!</p>
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Requested By</span><br>
                     <span><a href="#" title="Go to partner profile">@username</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Date</span><br>
                     <span><a href="#" title="Go to partner profile">6 months ago</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Status</span><br>
                     <span><a href="#" title="Go to partner profile">Production</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Progress</span><br>
                     <div class="progress progress-xs">
                       <div class="progress-bar progress-bar-success" style="width: 100%" role="progressbar"
@@ -244,19 +243,19 @@
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet expedita omnis! Consectetur ducimus mollitia quidem?</p>
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Requested By</span><br>
                     <span><a href="#" title="Go to partner profile">John Smith</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Date</span><br>
                     <span><a href="#" title="Go to partner profile">7 months ago</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Status</span><br>
                     <span><a href="#" title="Go to partner profile">Development</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Progress</span><br>
                     <div class="progress progress-xs">
                       <div class="progress-bar progress-bar-warning" style="width: 18%" role="progressbar"
@@ -311,19 +310,19 @@
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut deleniti dolorum impedit pariatur quam? Voluptatibus!</p>
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Requested By</span><br>
                     <span><a href="#" title="Go to partner profile">@username</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Date</span><br>
                     <span><a href="#" title="Go to partner profile">1 year ago</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Status</span><br>
                     <span><a href="#" title="Go to partner profile">Development</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Progress</span><br>
                     <div class="progress progress-xs">
                       <div class="progress-bar progress-bar-info" style="width: 68%" role="progressbar"
@@ -378,19 +377,19 @@
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, dicta dolorum ducimus officia porro quae quia.</p>
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Requested By</span><br>
                     <span><a href="#" title="Go to partner profile">John O.</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Date</span><br>
                     <span><a href="#" title="Go to partner profile">2 years ago</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Status</span><br>
                     <span><a href="#" title="Go to partner profile">Development</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Progress</span><br>
                     <div class="progress progress-xs">
                       <div class="progress-bar progress-bar-info bg-deep-purple" style="width: 78%" role="progressbar"
@@ -445,19 +444,19 @@
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque explicabo molestias odio temporibus! Deleniti perferendis repellat voluptas.</p>
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Requested By</span><br>
                     <span><a href="#" title="Go to partner profile">@john</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Date</span><br>
                     <span><a href="#" title="Go to partner profile">10 months ago</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Status</span><br>
                     <span><a href="#" title="Go to partner profile">Development</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Progress</span><br>
                     <div class="progress progress-xs">
                       <div class="progress-bar bg-cyan" style="width: 68%" role="progressbar"
@@ -512,19 +511,19 @@
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi, consectetur eligendi eos excepturi ipsam provident rem voluptates.</p>
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Requested By</span><br>
                     <span><a href="#" title="Go to partner profile">@smith</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Date</span><br>
                     <span><a href="#" title="Go to partner profile">1 year ago</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Status</span><br>
                     <span><a href="#" title="Go to partner profile">Development</a></span>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-3 col-xs-6">
                     <span class="text-uppercase font-600">Progress</span><br>
                     <div class="progress progress-xs">
                       <div class="progress-bar progress-bar-success" style="width: 68%" role="progressbar"
