--- a/katrid/theme/less/style.less
+++ b/katrid/theme/less/style.less
@@ -25,4 +25,5 @@
 @import "style/menu.less";
 @import "style/timeline.less";
 @import "style/progress-bars.less";
+@import "style/tabs.less";
 @import "style/utilities.less";
