--- a/katrid/templates/components.html
+++ b/katrid/templates/components.html
@@ -85,8 +85,10 @@
             <div class="panel-body">
               <strong>Lorem ipsum dolor sit.</strong>
               <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis deserunt, est, eum id, ipsam labore
-            laborum nobis nostrum numquam perferendis reprehenderit sed sequi sit sunt tempore vel voluptate voluptates!
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis deserunt, est, eum id, ipsam
+                labore
+                laborum nobis nostrum numquam perferendis reprehenderit sed sequi sit sunt tempore vel voluptate
+                voluptates!
               </p>
             </div>
           </div>
@@ -94,9 +96,10 @@
             <div class="panel-body">
               <strong>Lorem ipsum dolor sit.</strong>
               <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur eligendi laboriosam
-              perspiciatis saepe ullam unde! Commodi iusto nesciunt odio! Consequatur, dicta dolorum exercitationem itaque
-              magni officia quibusdam saepe voluptas.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur eligendi laboriosam
+                perspiciatis saepe ullam unde! Commodi iusto nesciunt odio! Consequatur, dicta dolorum exercitationem
+                itaque
+                magni officia quibusdam saepe voluptas.
               </p>
             </div>
           </div>
@@ -104,9 +107,11 @@
             <div class="panel-body">
               <strong>Lorem ipsum dolor sit amet.</strong>
               <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis debitis doloribus, dolorum est eum ipsum
-              itaque mollitia numquam perferendis voluptatibus? Nihil quos veniam vitae. Laborum, magni sed. Maxime quas,
-              veniam.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis debitis doloribus, dolorum est eum
+                ipsum
+                itaque mollitia numquam perferendis voluptatibus? Nihil quos veniam vitae. Laborum, magni sed. Maxime
+                quas,
+                veniam.
               </p>
             </div>
           </div>
@@ -114,8 +119,9 @@
             <div class="panel-body">
               <strong>Lorem ipsum dolor sit amet.</strong>
               <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid cumque ducimus, ea eius error impedit,
-              maiores nostrum quod sed tenetur veniam? Accusamus dolor eos est eum illo, obcaecati provident.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid cumque ducimus, ea eius error
+                impedit,
+                maiores nostrum quod sed tenetur veniam? Accusamus dolor eos est eum illo, obcaecati provident.
               </p>
             </div>
           </div>
@@ -142,8 +148,10 @@
             <div class="panel-body">
               <strong>Lorem ipsum dolor sit.</strong>
               <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis deserunt, est, eum id, ipsam labore
-            laborum nobis nostrum numquam perferendis reprehenderit sed sequi sit sunt tempore vel voluptate voluptates!
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis deserunt, est, eum id, ipsam
+                labore
+                laborum nobis nostrum numquam perferendis reprehenderit sed sequi sit sunt tempore vel voluptate
+                voluptates!
               </p>
             </div>
           </div>
@@ -151,9 +159,10 @@
             <div class="panel-body">
               <strong>Lorem ipsum dolor sit.</strong>
               <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur eligendi laboriosam
-              perspiciatis saepe ullam unde! Commodi iusto nesciunt odio! Consequatur, dicta dolorum exercitationem itaque
-              magni officia quibusdam saepe voluptas.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur eligendi laboriosam
+                perspiciatis saepe ullam unde! Commodi iusto nesciunt odio! Consequatur, dicta dolorum exercitationem
+                itaque
+                magni officia quibusdam saepe voluptas.
               </p>
             </div>
           </div>
@@ -161,9 +170,11 @@
             <div class="panel-body">
               <strong>Lorem ipsum dolor sit amet.</strong>
               <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis debitis doloribus, dolorum est eum ipsum
-              itaque mollitia numquam perferendis voluptatibus? Nihil quos veniam vitae. Laborum, magni sed. Maxime quas,
-              veniam.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis debitis doloribus, dolorum est eum
+                ipsum
+                itaque mollitia numquam perferendis voluptatibus? Nihil quos veniam vitae. Laborum, magni sed. Maxime
+                quas,
+                veniam.
               </p>
             </div>
           </div>
@@ -171,13 +182,147 @@
             <div class="panel-body">
               <strong>Lorem ipsum dolor sit amet.</strong>
               <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid cumque ducimus, ea eius error impedit,
-              maiores nostrum quod sed tenetur veniam? Accusamus dolor eos est eum illo, obcaecati provident.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid cumque ducimus, ea eius error
+                impedit,
+                maiores nostrum quod sed tenetur veniam? Accusamus dolor eos est eum illo, obcaecati provident.
               </p>
             </div>
           </div>
         </div>
       </div>
+      </div>
+
+      <div class="row margin-top-16">
+
+        <div class="col-lg-6">
+          <div class="tabs tabs-left">
+            <ul class="nav nav-tabs">
+              <li class="active">
+                <a data-toggle="tab" href="#tab-home-3">Home</a>
+              </li>
+              <li>
+                <a data-toggle="tab" href="#tab-profile-3">Profile</a>
+              </li>
+              <li>
+                <a data-toggle="tab" href="#tab-messages-3">Messages</a>
+              </li>
+              <li>
+                <a data-toggle="tab" href="#tab-settings-3">Settings</a>
+              </li>
+            </ul>
+            <div class="tab-content">
+              <div role="tabpanel" class="tab-pane active" id="tab-home-3">
+                <div class="panel-body">
+                  <strong>Lorem ipsum dolor sit.</strong>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis deserunt, est, eum id, ipsam
+                    labore
+                    laborum nobis nostrum numquam perferendis reprehenderit sed sequi sit sunt tempore vel voluptate
+                    voluptates!
+                  </p>
+                </div>
+              </div>
+              <div role="tabpanel" class="tab-pane" id="tab-profile-3">
+                <div class="panel-body">
+                  <strong>Lorem ipsum dolor sit.</strong>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur eligendi laboriosam
+                    perspiciatis saepe ullam unde! Commodi iusto nesciunt odio! Consequatur, dicta dolorum
+                    exercitationem itaque
+                    magni officia quibusdam saepe voluptas.
+                  </p>
+                </div>
+              </div>
+              <div role="tabpanel" class="tab-pane" id="tab-messages-3">
+                <div class="panel-body">
+                  <strong>Lorem ipsum dolor sit amet.</strong>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis debitis doloribus, dolorum est
+                    eum ipsum
+                    itaque mollitia numquam perferendis voluptatibus? Nihil quos veniam vitae. Laborum, magni sed.
+                    Maxime quas,
+                    veniam.
+                  </p>
+                </div>
+              </div>
+              <div role="tabpanel" class="tab-pane" id="tab-settings-3">
+                <div class="panel-body">
+                  <strong>Lorem ipsum dolor sit amet.</strong>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid cumque ducimus, ea eius error
+                    impedit,
+                    maiores nostrum quod sed tenetur veniam? Accusamus dolor eos est eum illo, obcaecati provident.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="tabs tabs-right">
+            <ul class="nav nav-tabs">
+              <li class="active">
+                <a data-toggle="tab" href="#tab-home-4">Home</a>
+              </li>
+              <li>
+                <a data-toggle="tab" href="#tab-profile-4">Profile</a>
+              </li>
+              <li>
+                <a data-toggle="tab" href="#tab-messages-4">Messages</a>
+              </li>
+              <li>
+                <a data-toggle="tab" href="#tab-settings-4">Settings</a>
+              </li>
+            </ul>
+            <div class="tab-content">
+              <div role="tabpanel" class="tab-pane active" id="tab-home-4">
+                <div class="panel-body">
+                  <strong>Lorem ipsum dolor sit.</strong>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis deserunt, est, eum id, ipsam
+                    labore
+                    laborum nobis nostrum numquam perferendis reprehenderit sed sequi sit sunt tempore vel voluptate
+                    voluptates!
+                  </p>
+                </div>
+              </div>
+              <div role="tabpanel" class="tab-pane" id="tab-profile-4">
+                <div class="panel-body">
+                  <strong>Lorem ipsum dolor sit.</strong>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur eligendi laboriosam
+                    perspiciatis saepe ullam unde! Commodi iusto nesciunt odio! Consequatur, dicta dolorum
+                    exercitationem itaque
+                    magni officia quibusdam saepe voluptas.
+                  </p>
+                </div>
+              </div>
+              <div role="tabpanel" class="tab-pane" id="tab-messages-4">
+                <div class="panel-body">
+                  <strong>Lorem ipsum dolor sit amet.</strong>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis debitis doloribus, dolorum est
+                    eum ipsum
+                    itaque mollitia numquam perferendis voluptatibus? Nihil quos veniam vitae. Laborum, magni sed.
+                    Maxime quas,
+                    veniam.
+                  </p>
+                </div>
+              </div>
+              <div role="tabpanel" class="tab-pane" id="tab-settings-4">
+                <div class="panel-body">
+                  <strong>Lorem ipsum dolor sit amet.</strong>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid cumque ducimus, ea eius error
+                    impedit,
+                    maiores nostrum quod sed tenetur veniam? Accusamus dolor eos est eum illo, obcaecati provident.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
     </div>
   </div>
