--- a/katrid/theme/less/variables.less
+++ b/katrid/theme/less/variables.less
@@ -742,7 +742,8 @@
 @panel-footer-bg:             #f5f5f5;
 
 @panel-default-text:          @gray-dark;
-@panel-default-border:        #ddd;
+@panel-default-border:        #e7eaec;
+//@panel-default-border:        #ddd;
 @panel-default-heading-bg:    #f5f5f5;
 
 @panel-primary-text:          #fff;
