--- a/katrid/templates/form-elements.html
+++ b/katrid/templates/form-elements.html
@@ -19,7 +19,7 @@
 
   <div class="content">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-lg-6">
         <div class="panel panel-default">
           <div class="panel-heading">
             Bootstrap Controls
@@ -349,7 +349,83 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
+        <div class="panel panel-default data-panel">
+          <div class="panel-heading">
+            Input Addons
+          </div>
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-lg-6">
+                <label class="prepend-icon">
+                  <i class="icon fa fa-user"></i>
+                  <input type="text" placeholder="User name" class="form-control">
+                </label>
+              </div>
+              <div class="col-lg-6">
+                <label class="append-icon">
+                  <i class="icon fa fa-user"></i>
+                  <input type="text" placeholder="User name" class="form-control">
+                </label>
+              </div>
+
+              <div class="col-lg-6">
+                <label class="prepend-icon">
+                  <i class="icon fa fa-envelope"></i>
+                  <input type="text" placeholder="Email address" class="form-control">
+                </label>
+              </div>
+              <div class="col-lg-6">
+                <label class="append-icon">
+                  <i class="icon fa fa-envelope"></i>
+                  <input type="text" placeholder="Email address" class="form-control">
+                </label>
+              </div>
+
+              <div class="col-lg-6">
+                <label class="prepend-icon">
+                  <i class="icon fa fa-phone"></i>
+                  <input type="text" placeholder="Phone number" class="form-control">
+                </label>
+              </div>
+              <div class="col-lg-6">
+                <label class="append-icon">
+                  <i class="icon fa fa-phone"></i>
+                  <input type="text" placeholder="Phone number" class="form-control">
+                </label>
+              </div>
+
+              <div class="col-lg-6">
+                <label class="prepend-icon">
+                  <i class="icon fa fa-lock"></i>
+                  <input type="password" placeholder="Password" class="form-control">
+                </label>
+              </div>
+              <div class="col-lg-6">
+                <label class="append-icon">
+                  <i class="icon fa fa-lock"></i>
+                  <input type="password" placeholder="Password" class="form-control">
+                </label>
+              </div>
+
+              <div class="col-lg-6">
+                <label class="prepend-icon">
+                  <i class="icon fa fa-globe"></i>
+                  <input type="text" placeholder="Website" class="form-control">
+                </label>
+              </div>
+              <div class="col-lg-6">
+                <label class="append-icon">
+                  <i class="icon fa fa-globe"></i>
+                  <input type="text" placeholder="Website" class="form-control">
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6">
         <div class="panel panel-default data-panel">
           <div class="panel-heading">
             Additional Controls
@@ -548,7 +624,7 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <div class="panel panel-default">
           <div class="panel-heading">
             Optional Plugin Controls
@@ -656,6 +732,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
