--- a/katrid/theme/less/style.less
+++ b/katrid/theme/less/style.less
@@ -26,4 +26,5 @@
 @import "style/timeline.less";
 @import "style/progress-bars.less";
 @import "style/tabs.less";
+@import "style/forms.less";
 @import "style/utilities.less";
