--- a/katrid/templates/advanced-forms.html
+++ b/katrid/templates/advanced-forms.html
@@ -149,7 +149,7 @@
                   <div class="col-lg-12">
                     <div class="row">
                       <section class="col-sm-12">
-                      <label>Address</label>
+                        <label>Address</label>
                         <input class="form-control" placeholder="Line 1...">
                       </section>
                       <section class="col-sm-12">
@@ -183,7 +183,10 @@
                 <div class="row">
                   <div class="col-lg-12 form-group">
                     <label for="input-phone-1">Phone</label>
-                    <input class="form-control" id="input-phone-1">
+                    <label class="prepend-icon">
+                      <i class="icon fa fa-phone"></i>
+                      <input class="form-control" id="input-phone-1" placeholder="Phone number">
+                    </label>
                   </div>
                 </div>
 
@@ -191,14 +194,20 @@
                 <div class="row">
                   <div class="col-lg-12 form-group">
                     <label for="input-url-1">Website</label>
-                    <input class="form-control" id="input-url-1">
+                    <label class="prepend-icon">
+                      <i class="icon fa fa-globe"></i>
+                      <input class="form-control" id="input-url-1" placeholder="Website url">
+                    </label>
                   </div>
                 </div>
 
                 <div class="row">
                   <div class="col-lg-12 form-group">
                     <label for="input-email-1">Email</label>
-                    <input class="form-control" id="input-email-1">
+                    <label class="prepend-icon">
+                      <i class="icon fa fa-envelope"></i>
+                      <input class="form-control" id="input-email-1" placeholder="Email address">
+                    </label>
                   </div>
                 </div>
 
@@ -370,7 +379,10 @@
                 <div class="row">
                   <label for="input-phone-1" class="col-lg-2">Phone</label>
                   <div class="col-lg-10 field border">
-                    <input class="form-control" id="input-phone-1">
+                    <label class="prepend-icon">
+                      <i class="icon fa fa-phone"></i>
+                      <input class="form-control" id="input-phone-1" placeholder="Phone number">
+                    </label>
                   </div>
                 </div>
 
@@ -378,7 +390,10 @@
                 <div class="row">
                   <label for="input-url-1" class="col-lg-2">Website</label>
                   <div class="col-lg-10 field border">
-                    <input class="form-control" id="input-url-1">
+                    <label class="prepend-icon">
+                      <i class="icon fa fa-globe"></i>
+                      <input class="form-control" id="input-url-1" placeholder="Website url">
+                    </label>
                   </div>
                 </div>
 
@@ -386,7 +401,10 @@
 
                   <label for="input-email-1" class="col-lg-2">Email</label>
                   <div class="col-lg-10 field border">
-                    <input class="form-control" id="input-email-1">
+                    <label class="prepend-icon">
+                      <i class="icon fa fa-envelope"></i>
+                      <input class="form-control" id="input-email-1" placeholder="Email address">
+                    </label>
                   </div>
                 </div>
 
