--- a/katrid/templates/data-tables.html
+++ b/katrid/templates/data-tables.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
   <div class="panel page-heading">
-    <h2>Data Tables</h2>
+    <h2>Data Tables <label class="label label-info">Responsive</label></h2>
     <ol class="breadcrumb">
       <li>
         <a href="#">Home</a>
@@ -23,7 +23,7 @@
       </div>
       <div class="panel-body">
 
-        <table id="data-table-1" class="table table-striped table-bordered table-hover">
+        <table id="data-table-1" class="table table-striped table-bordered table-hover display responsive nowrap" width="100%">
           <thead>
           <tr>
             <th>Name</th>
@@ -384,7 +384,7 @@
       </div>
       <div class="panel-body">
 
-        <table id="data-table-2" class="table table-striped table-bordered table-hover">
+        <table id="data-table-2" class="table table-striped table-bordered table-hover display responsive nowrap" width="100%">
           <thead>
           <tr>
             <th>Name</th>
@@ -741,11 +741,15 @@
 {% endblock %}
 {% block startup_code %}
   <script src="plugins/datatables/datatables.js"></script>
+  <script src="plugins/datatables/datatables.responsive.min.js"></script>
   <script>
     $(document).ready(function () {
-      $('#data-table-1').dataTable();
+      $('#data-table-1').dataTable({
+        responsive: true
+      });
       $('#data-table-2').dataTable({
         dom: 'Bfrtip',
+        responsive: true,
         buttons: [
           'colvis'
         ]
