--- a/katrid/templates/tables.html
+++ b/katrid/templates/tables.html
@@ -35,9 +35,9 @@
               <tbody>
               <tr>
                 <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>John</td>
+                <td>Smith</td>
+                <td>@john</td>
               </tr>
               <tr>
                 <td>2</td>
@@ -75,9 +75,9 @@
               <tbody>
               <tr>
                 <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>John</td>
+                <td>Smith</td>
+                <td>@john</td>
               </tr>
               <tr>
                 <td>2</td>
@@ -115,13 +115,13 @@
               <tbody>
               <tr>
                 <td rowspan="2">1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>John</td>
+                <td>Smith</td>
+                <td>@john</td>
               </tr>
               <tr>
-                <td>Mark</td>
-                <td>Otto</td>
+                <td>John</td>
+                <td>Smith</td>
                 <td>@TwBootstrap</td>
               </tr>
               <tr>
@@ -159,9 +159,9 @@
               <tbody>
               <tr>
                 <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>John</td>
+                <td>Smith</td>
+                <td>@john</td>
               </tr>
               <tr>
                 <td>2</td>
@@ -205,9 +205,9 @@
               <tbody>
               <tr>
                 <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>John</td>
+                <td>Smith</td>
+                <td>@john</td>
               </tr>
               <tr>
                 <td>2</td>
@@ -259,9 +259,9 @@
                     <i></i>
                   </label>
                 </td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>John</td>
+                <td>Smith</td>
+                <td>@john</td>
               </tr>
               <tr>
                 <td class="action-checkbox">
@@ -320,9 +320,9 @@
                     <i></i>
                   </label>
                 </td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>John</td>
+                <td>Smith</td>
+                <td>@john</td>
               </tr>
               <tr>
                 <td class="action-checkbox">
@@ -381,9 +381,9 @@
                     <i></i>
                   </label>
                 </td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>John</td>
+                <td>Smith</td>
+                <td>@john</td>
               </tr>
               <tr>
                 <td class="action-checkbox">
@@ -443,9 +443,9 @@
                     <i></i>
                   </label>
                 </td>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>John</td>
+                <td>Smith</td>
+                <td>@john</td>
               </tr>
               <tr>
                 <td class="action-checkbox">
