--- a/katrid/templates/include/navbar.html
+++ b/katrid/templates/include/navbar.html
@@ -63,8 +63,8 @@
           </li>
 
           <hr>
-          <a href="#" class="btn btn-default">
-            Read more
+          <a href="#" class="btn btn-default btn-block">
+            View More
           </a>
         </ul>
 
