--- a/katrid/theme/less/style/menu.less
+++ b/katrid/theme/less/style/menu.less
@@ -26,6 +26,12 @@
   }
 }
 
+.dt-button-collection.dropdown-menu > li > a {
+  padding: 5px 17px;
+  margin: 0 3px;
+  border-radius: 0;
+}
+
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu.dropdown-notifications-menu {
     position: absolute;
