--- a/katrid/templates/calendar-view.html
+++ b/katrid/templates/calendar-view.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <div class="content no-padding">
+  <div class="content">
   <div class="panel panel-default data-panel">
     <div class="panel-body">
 
