--- a/katrid/templates/calendar-view.html
+++ b/katrid/templates/calendar-view.html
@@ -10,7 +10,7 @@
         <ol class="breadcrumb">
           <li><a href="#">Forms</a></li>
           <li>Calendar View
-            <!-- test only purposes (remember to remove it in future) -->
+            <!-- demo only purposes (remember to remove it in future) -->
             <label title="Click here to toggle no-padding class" onclick="$('.content').toggleClass('no-padding')" class="label label-primary">Toggle no-padding</label>
           </li>
         </ol>
