--- a/katrid/templates/list-view.html
+++ b/katrid/templates/list-view.html
@@ -6,7 +6,10 @@
         <a href="#" title="Add to favorite"><i class="fa star fa-star-o pull-right"></i></a>
         <ol class="breadcrumb">
           <li><a href="#">Forms</a></li>
-          <li>List View <label title="Click here to toggle no-padding class" onclick="$('.content').toggleClass('no-padding')" class="label label-primary">Toggle no-padding</label></li>
+          <li>List View
+            <!-- demo only purposes (remember to remove it in future) -->
+            <label title="Click here to toggle no-padding class" onclick="$('.content').toggleClass('no-padding')" class="label label-primary">Toggle no-padding</label>
+          </li>
         </ol>
         <div class="pull-right">
             <span>
