--- a/katrid/templates/advanced-forms.html
+++ b/katrid/templates/advanced-forms.html
@@ -244,7 +244,7 @@
 
             <div class="row hidden-xs">
               <div class="col-sm-12">
-                <div class="status-field bg-deep-purple pull-right">
+                <div class="status-field pull-right">
                   <ul class="steps">
                     <li>
                       Registered
