--- a/katrid/templates/include/horz-advanced-form.html
+++ b/katrid/templates/include/horz-advanced-form.html
@@ -4,7 +4,7 @@
 
     <div class="row hidden-xs">
       <div class="col-sm-12">
-        <div class="status-field status-field-sm bg-deep-purple pull-right">
+        <div class="status-field status-field-sm pull-right">
           <ul class="steps">
             <li>
               Registered
