--- a/katrid/templates/crm.html
+++ b/katrid/templates/crm.html
@@ -2,7 +2,10 @@
 {% block content %}
   <div class="panel">
     <div class="page-heading bg-white">
-      <h2><i class="pe pe-fw pe-7s-rocket"></i>Sales Opportunities</h2>
+      <h2>Sales Opportunities <i class="pe pe-fw pe-7s-rocket"></i></h2>
+      <p class="help-block">
+<strong>Drag and drop</strong> opportunities panels between gourps.
+      </p>
       <ol class="breadcrumb">
         <li>
           <a href="#">Home</a>
@@ -13,6 +16,12 @@
         <li>Opportunities</li>
       </ol>
     </div>
+  </div>
+
+  <div class="col-sm-12">
+        <div class="alert alert-primary">
+          <strong>Drag and drop</strong> opportunities panels between gourps.
+        </div>
   </div>
 
   <div class="content">
@@ -37,8 +46,9 @@
             </ul>
           </div>
           <h4><i class="pe pe-fw pe-7s-call"></i> New Opportunity</h4>
-          <p class="help-block">My help message...</p>
+          <p class="help-block">Start dragging and dropping.</p>
         </div>
+
         <div class="kanban-items">
 
           <!-- kanban item -->
