--- a/katrid/templates/crm.html
+++ b/katrid/templates/crm.html
@@ -4,7 +4,7 @@
     <div class="page-heading bg-white">
       <h2>Sales Opportunities <i class="pe pe-fw pe-7s-rocket"></i></h2>
       <p class="help-block">
-<strong>Drag and drop</strong> opportunities panels between gourps.
+        <strong>Drag and drop</strong> opportunities panels between gourps.
       </p>
       <ol class="breadcrumb">
         <li>
@@ -19,9 +19,10 @@
   </div>
 
   <div class="col-sm-12">
-        <div class="alert alert-primary">
-          <strong>Drag and drop</strong> opportunities panels between gourps.
-        </div>
+    <button class="close" data-dismiss="alert">&times;</button>
+    <div class="alert alert-primary">
+      <strong>Drag and drop</strong> opportunities panels between gourps.
+    </div>
   </div>
 
   <div class="content">
@@ -96,7 +97,8 @@
               <label for="star1">
                 <i class="fa fa-star"></i>
               </label>
-            </div>          </div>
+            </div>
+          </div>
           <!-- end kanban item -->
 
           <div class="kanban-item bg-light-blue">
