--- a/katrid/templates/crm.html
+++ b/katrid/templates/crm.html
@@ -1,21 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="panel">
-    <div class="page-heading bg-white">
-      <h2>Sales Opportunities <i class="pe pe-fw pe-7s-rocket"></i></h2>
-      <p class="help-block">
-        <strong>Drag and drop</strong> opportunities panels between gourps.
-      </p>
-      <ol class="breadcrumb">
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">CRM</a>
-        </li>
-        <li>Opportunities</li>
-      </ol>
-    </div>
+  <div class="panel page-heading">
+    <h2>Sales Opportunities <i class="pe pe-fw pe-7s-rocket"></i></h2>
+    <p class="help-block">
+      <strong>Drag and drop</strong> opportunities panels between gourps.
+    </p>
+    <ol class="breadcrumb">
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="#">CRM</a>
+      </li>
+      <li>Opportunities</li>
+    </ol>
   </div>
 
   <div class="col-sm-12">
