--- a/katrid/templates/crm.html
+++ b/katrid/templates/crm.html
@@ -20,7 +20,7 @@
 
     <div class="alert alert-primary">
       <button class="close" data-dismiss="alert">&times;</button>
-      <strong>Drag and drop</strong> opportunities panels between gourps.
+      <strong>Drag and drop</strong> opportunities cards between gourps.
     </div>
 
     <div class="kanban col-sm-12">
